Centre challenge layout on small screens
Padding will be "cropped" evenly on both sides.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,6 +42,7 @@ body {
     flex-direction: row-reverse;
     flex-wrap: wrap;
     height: 100vh;
+    justify-content: center;
 }
 
 /* Section styling */
