--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,9 @@
             <h2>{{ displayed_user.score }} Points</h2>
         </section>
 
-        <canvas id="score-history"></canvas>
+        <div id="chart-container">
+            <canvas id="score-history"></canvas>
+        </div>
 
         <section id="recent-solves">
             <h2>Solves</h2>
@@ -106,6 +108,7 @@
                         }
                     },
                     responsive: true,
+                    maintainAspectRatio: false,
                     plugins: {
                         legend: {
                             position: 'top',
@@ -115,7 +118,10 @@
                         }
                     },
                     layout: {
-                        padding: 20
+                        padding: {
+                            x: 20,
+                            y: 0
+                        }
                     },
                     // Set the overall background color to dark
                     backgroundColor: '#333333'
