--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -411,3 +411,11 @@ ol li:before {
     font-weight: bold; /* Makes the numbers bold */
     margin-right: 10px; /* Space between the number and text */
 }
+
+
+/* Leaderboard & Solves History */
+div.link-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
