--- a/templates/rules.html
+++ b/templates/rules.html
@@ -2,7 +2,7 @@
 {% block title %}Rules{% endblock %}
 
 {% block body %}
-    <section id="rules-section">
+    <section class="card" id="rules-section">
         <h1>Rulez</h1>
         <article class="rules">
             <h2></h2>
