--- a/templates/solves.html
+++ b/templates/solves.html
@@ -15,12 +15,6 @@
         main > * {
             margin-bottom: 1em;
         }
-        section {
-            background-color: var(--light-bg-color);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        }
         h2 {
             padding-bottom: 10px;
         }
@@ -35,7 +29,7 @@
 
 {% block body %}
     <main>
-        <section>
+        <section class="card">
             <div class="link-row">
                 <h2>Solve History</h2>
                 <a href="javascript:window.scrollTo(0, document.body.scrollHeight);">Jump to bottom &darr;</a>
@@ -76,7 +70,7 @@
             </table>
         </section>
 
-        <section>
+        <section class="card">
             <h2>Legend</h2>
             <p>🏆 &mdash; First blood</p>
         </section>
