--- a/templates/rules.html
+++ b/templates/rules.html
@@ -2,21 +2,23 @@
 {% block title %}Rules{% endblock %}
 
 {% block body %}
-    <section class="card" id="rules-section">
-        <h1>Rulez</h1>
-        <article class="rules">
-            <ol>
-                <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
-                <li>DO NOT DDOS THE WEBSITE.</li>
-                <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
-                <li>If you are stuck, I hereby give you permission to annoy Andrew about it.</li>
-                <li>Please do not just share flags and solutions when asked.</li>
-                <li>If your friends are stuck, you should help them without giving away all the answers (and all the fun)</li>
-                <li>The flag format is saint{FLAG_FORMAT}</li>
-                <li>This is a game, <strong>please have fun.</strong></li>
-                <li>The winners ARE better than everyone else though.</li>
-                <li>All complaints about the rules here will be redirected to /dev/null for further consideration.</li>
-            </ol>
-        </article>
-    </section>
+    <main>
+        <section class="card" id="rules-section">
+            <h1>Rulez</h1>
+            <article class="rules">
+                <ol>
+                    <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
+                    <li>DO NOT DDOS THE WEBSITE.</li>
+                    <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
+                    <li>If you are stuck, I hereby give you permission to annoy Andrew about it.</li>
+                    <li>Please do not just share flags and solutions when asked.</li>
+                    <li>If your friends are stuck, you should help them without giving away all the answers (and all the fun)</li>
+                    <li>The flag format is saint{FLAG_FORMAT}</li>
+                    <li>This is a game, <strong>please have fun.</strong></li>
+                    <li>The winners ARE better than everyone else though.</li>
+                    <li>All complaints about the rules here will be redirected to /dev/null for further consideration.</li>
+                </ol>
+            </article>
+        </section>
+    </main>
 {% endblock %}
