--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,13 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <section id="home-section">
-        <h1>Welcome to SaintCTF</h1>
-        <p>Please sign up <a href="/register">here</a>!</p>
-        <p>If you are new to CTFs, then</p>
-        <p>INSERT CTF EXPLANATION HERE</p>
-        <p>©That idiot ning, 2024</p>
-    </section>
+    <main>
+        <section id="home-section">
+            <h1>Welcome to SaintCTF</h1>
+            <p>Please sign up <a href="/register">here</a>!</p>
+            <p>If you are new to CTFs, then</p>
+            <p>INSERT CTF EXPLANATION HERE</p>
+            <p>©That idiot ning, 2024</p>
+        </section>
+    </main>
 {% endblock %}
