Standardise `<h2>` padding where necessary

--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -16,7 +16,7 @@ a:hover {
 
 /* Section headings */
 h2 {
-    padding-bottom: 10px;
+    padding-bottom: var(--spacing);
 }
 
 /* Container for both sections */
