--- a/templates/solves.html
+++ b/templates/solves.html
@@ -15,7 +15,7 @@
             margin-bottom: 1em;
         }
         h2 {
-            padding-bottom: 10px;
+            padding-bottom: var(--spacing);
         }
         a {
             text-decoration: none;
