Unify link styling
All links within a paragraph are underlined, but links which are not
within a paragraph (`action` links) are only underlined on hover.

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
         </form>
-        <p>No account? Sign up <a href="/register">here</a></p>
+        <p>No account? Sign up <a class="action" href="/register">here &rarr;</a></p>
     </section>
 
     <script>
