--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,13 +59,7 @@ body {
 /* General styles for links in the navbar */
 #main-nav ul li a {
     color: inherit;
-    text-decoration: none;
     font-weight: bold;
-}
-
-/* Styles for links on hover in the navbar */
-#main-nav ul li a:hover {
-    text-decoration: underline;
 }
 
 /* Highlight navbar selected item with increased specificity */
@@ -100,6 +94,14 @@ tbody tr.highlight {
 
 a {
     color: var(--link-color);
+}
+
+a.action, :not(p) > a {
+    text-decoration: none;
+}
+
+a.action:hover, :not(p) > a:hover {
+    text-decoration: underline;
 }
 
 details > summary {
