--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    <section id="login-section">
+    <section class="card" id="login-section">
         <h1>Sign Up</h1>
         <form id="signup-form" action="/register" method="POST">
             <input type="text" name="username" placeholder="Username:" required="required"> <br>
