--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-    <section id="login-section">
+    <section class="card" id="login-section">
         <h1>Login</h1>
         <form id="login-form" action="/login" method="POST">
             <input type="text" name="username" placeholder="Username:" required="required"> <br>
