--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -158,6 +158,7 @@ ol li::marker {
     padding: 1.5em;
     border-radius: 0.5em;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    border: 2px solid var(--form-field-border-color); /* Darker border for a subtle and elegant look */
 }
 
 /* Leaderboard & Solves History */
