Fix challenge sidebar height
The challenges page sidebar now extends to the correct height, rather
than adopting the entire height of the viewport, which disregards other
elements (such as the header and navigation bar).

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,6 +18,10 @@ body, h1, h2, p, ul, li {
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
 /* Basic body styling */
 body {
     height: 100%; /* Make body fill entire page, but dont extend further */
