--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -1,11 +1,18 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 /* Andrew cool css */
 #challenge-main {
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
-    height: 100vh;
+    align-items: stretch;
+    height: 100%;
     justify-content: center;
     padding: 0;
+    flex: 1;
 }
 
 /* Section styling */
