--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,6 @@
             }
         </script>
     </header>
-    {% block body required %}{% endblock %}
+    <main>{% block body required %}{% endblock %}</main>
 </body>
 </html>
