--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
 
     {% block head %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-        <!-- Jquery 3.6.0 -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- jQuery 3.7.1 -->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     {% endblock %}
 </head>
 
