--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,9 @@
     <!-- Sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
+
+    <script {% if login_msg %} data-login_msg {% endif %}
+        src="{{ url_for('static', filename='js/login.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -23,52 +26,4 @@
         </form>
         <p>No account? Sign up <a class="action" href="/register">here &rarr;</a></p>
     </section>
-
-    <script>
-
-        // Capture redirects to this page
-        {% if login_msg %}
-        $(document).ready(function() {
-            Swal.fire({
-                title: "You have to log in to do that!",
-                icon: "info"
-            });
-        });
-        {% endif %}
-
-
-        $(document).ready(function() {
-            $('#login-form').submit(function(e) {
-                e.preventDefault();  // Prevent default form submission
-
-                const formData = $(this).serialize();  // Serialize form data
-
-                $.ajax({
-                    type: 'POST',
-                    url: '/login',
-                    data: formData,
-                    success: function(response) {
-                        if (response.status === 'success') {
-                            // On successful login we go straight to challenges
-                            window.location.href = '/challenges'
-                        } else if (response.status === 'error') {
-                            Swal.fire({
-                                title: "Login Failed!",
-                                text: response.message,
-                                icon: "error"
-                            });
-                        }
-                    },
-                    error: function(xhr, status, error) {
-                        // Handler if AJAX itself fails (network issues, etc.)
-                        Swal.fire({
-                            title: "Error",
-                            text: "Something went wrong: " + error,
-                            icon: "error"
-                        });
-                    }
-                });
-            });
-        });
-    </script>
 {% endblock %}
